<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/gameInfoTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info_txt_1"
        android:textAlignment="center"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/gameInfoTxt2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guess_a_number"
        android:textAlignment="center"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/guessTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/guess" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/guessBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/guess" />

        <Button
            android:id="@+id/restartBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/restart" />
    </LinearLayout>

    <TextView
        android:id="@+id/pastTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/past_guesses"
        android:textSize="24sp" />

</LinearLayout>
