<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/winTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/congrats_txt"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image_describe_trophy"
            android:src="@drawable/trophy_small" />

        <Button
            android:id="@+id/offsiteBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/click_to_brag"
            android:textSize="18sp" />

        <Button
            android:id="@+id/restartBtn2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/click_to_play_again"
            android:textSize="18sp" />


    </LinearLayout>
</ScrollView>